// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Contribution /> should NOT render invalid preselected convention 1`] = `
.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c2 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c4:link,
.c4:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c4:not([disabled]):hover,
.c4:not([disabled]):active,
.c4:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c4[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  margin-bottom: 1.6rem;
  padding: 1rem 2rem;
  color: #3e486e;
  background-color: #f2f5fa;
  border: 1px solid transparent;
  border-radius: 0.6rem;
  margin: 40px 0;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

<div>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit votre convention collective ?
    </h2>
    <div>
      <h6
        class="c2"
      >
        <span
          aria-label="Icone convention collective"
          role="img"
        >
          📖
        </span>
         
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=456"
          rel="noopener noreferrer"
          target="_blank"
        >
          unknown convention
           (IDCC 
          idcc-unknown
          )
        </a>
      </h6>
      <div
        class="c3"
      >
        Désolé nous n'avons pas de réponse pour cette convention collective
      </div>
      <br />
      <br />
      <button
        class="c4"
      >
        Changer de convention collective
      </button>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render answer references 1`] = `
.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c2 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c4:link,
.c4:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c4:not([disabled]):hover,
.c4:not([disabled]):active,
.c4:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c4[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c3 {
  margin: 5px 0;
  list-style-type: none;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

<div>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit votre convention collective ?
    </h2>
    <div>
      <h6
        class="c2"
      >
        <span
          aria-label="Icone convention collective"
          role="img"
        >
          📖
        </span>
         
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=123"
          rel="noopener noreferrer"
          target="_blank"
        >
          preselected convention
           (IDCC 
          idcc-preselected
          )
        </a>
      </h6>
      <div>
        <p>
          hello 
          <strong>
            123
          </strong>
        </p>
      </div>
      <h3
        class="c1"
      >
        Références
      </h3>
      <h4
        class="c2"
      >
        Convention collective
      </h4>
      <li
        class="c3"
      >
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=123"
          rel="noopener noreferrer"
          target="_blank"
        >
          reference CC 1
        </a>
      </li>
      <h4
        class="c2"
      >
        Autres sources
      </h4>
      <li
        class="c3"
      >
        <a
          href="http://path/to/ref"
          rel="noopener noreferrer"
          target="_blank"
        >
          reference externe 1
        </a>
      </li>
      <br />
      <br />
      <button
        class="c4"
      >
        Changer de convention collective
      </button>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render preselected convention 1`] = `
.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c2 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #ff7067;
  border-color: #ff7067;
  box-shadow: 0px 10px 30px rgba(52,77,122,0.26),0px 4px 5px rgba(117,152,214,0.35);
  opacity: 1;
}

.c3:link,
.c3:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):active,
.c3:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #ffa09a;
  border-color: #ffa09a;
}

.c3[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

<div>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit votre convention collective ?
    </h2>
    <div>
      <h6
        class="c2"
      >
        <span
          aria-label="Icone convention collective"
          role="img"
        >
          📖
        </span>
         
        <a
          href="https://www.legifrance.gouv.fr/affichIDCC.do?idConvention=123"
          rel="noopener noreferrer"
          target="_blank"
        >
          preselected convention
           (IDCC 
          idcc-preselected
          )
        </a>
      </h6>
      <div>
        <p>
          hello 
          <strong>
            123
          </strong>
        </p>
      </div>
      <br />
      <br />
      <button
        class="c3"
      >
        Changer de convention collective
      </button>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with both answers 1`] = `
.c2 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c4 {
  width: 100%;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

.c3 {
  margin: 2rem 0;
  padding: 1rem;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          generic
        </strong>
      </p>
    </div>
  </section>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit votre convention collective ?
    </h2>
    <div>
      <div
        class="c2 c3"
      >
        
        <p>
          Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
        </p>
        <input
          class="c4"
          placeholder="Nom d'entreprise, SIRET, nom de convention collective"
          role="search"
          type="search"
          value=""
        />
        
      </div>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with conventions answer 1`] = `
.c2 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c4 {
  width: 100%;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

.c3 {
  margin: 2rem 0;
  padding: 1rem;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit votre convention collective ?
    </h2>
    <div>
      <div
        class="c2 c3"
      >
        
        <p>
          Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
        </p>
        <input
          class="c4"
          placeholder="Nom d'entreprise, SIRET, nom de convention collective"
          role="search"
          type="search"
          value=""
        />
        
      </div>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with generic answer 1`] = `
.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

<div>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit le code du travail ?
    </h2>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with generic answer and content 1`] = `
.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
}

.c7 + .c6 {
  border-top: 1px solid #bbcadf;
}

.c10 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin: 2rem 0;
  padding: 0;
}

.c9 {
  position: relative;
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
  margin-right: 1rem;
  color: #7598d6;
}

[aria-expanded="true"] .c9,
[aria-selected="true"] .c9 {
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  cursor: pointer;
}

.c8:hover,
.c8:focus,
.c8:focus-within,
.c8[aria-expanded="true"] {
  color: #3e486e;
}

.c11 {
  padding: 1.6rem;
  -webkit-animation: bcCCNc 0.35s ease-in;
  animation: bcCCNc 0.35s ease-in;
}

.c11 > *:first-child {
  margin-top: 0;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c11.accordion__body--hidden {
  display: none;
}

.c13 {
  position: relative;
  overflow: hidden;
}

.c13:before,
.c13:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c13:before {
  left: -2rem;
}

.c13:after {
  right: -2rem;
}

.c14 {
  overflow-x: auto;
}

.c15 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c15 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c15 td,
.c15 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c15 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c15 thead,
.c15 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c15 tfoot {
  vertical-align: top;
}

.c5 {
  margin-bottom: 3.2rem;
}

.c12 {
  margin-bottom: 0.4rem;
}

.c4 {
  margin-bottom: 3.2rem;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c2 {
  margin-bottom: 3.2rem;
}

.c0 {
  margin-bottom: 2rem;
  padding: 1rem 2rem;
}

<div>
  <section
    class="c0"
  >
    <h2
      class="c1"
    >
      Que dit le code du travail ?
    </h2>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <p
          class="c4"
        >
          Le contrat d'extra, ou contrat d'usage, est un contrat à durée déterminée particulier, qui permet à un employeur d'un secteur d'activité strictement défini d'augmenter son effectif en employant rapidement un extra. Ce contrat ne peut être  utilisé que pour répondre à des besoins ponctuels et immédiats pour un poste spécifique et limités dans le temps.
        </p>
        <div
          class="c5"
          data-accordion-component="Accordion"
        >
          <div
            class="c6 c7"
            data-accordion-component="AccordionItem"
          >
            <div
              aria-level="3"
              class="accordion__heading"
              data-accordion-component="AccordionItemHeading"
              role="heading"
            >
              <div
                aria-controls="accordion__panel-0"
                aria-disabled="false"
                aria-expanded="false"
                class="c8"
                data-accordion-component="AccordionItemButton"
                id="accordion__heading-0"
                role="button"
                tabindex="0"
              >
                <svg
                  class="c9"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="9 18 15 12 9 6"
                  />
                </svg>
                <h1
                  class="c10"
                >
                  Conditions de recours
                </h1>
              </div>
            </div>
            <div
              aria-hidden="true"
              aria-labelledby="accordion__heading-0"
              class="c11"
              data-accordion-component="AccordionItemPanel"
              hidden=""
              id="accordion__panel-0"
            >
              <p>
                Un 
                CDD
                 d'usage peut être conclu s'il remplit les 3 condition suivantes :
              </p>
              <ul>
                <li
                  class="c12"
                >
                  <p>
                    un secteur d'activité qui autorise ce type de contrat ;
                  </p>
                </li>
                <li
                  class="c12"
                >
                  <p>
                    usage constant de ne pas recourir au contrat à durée indéterminée ;
                  </p>
                </li>
                <li
                  class="c12"
                >
                  <p>
                    la nature temporaire de l'emploi.
                  </p>
                </li>
              </ul>
              <p>
                le contrat d'extra est conclu pour la durée d'une mission  de quelques heures, d'une journée ou de plusieurs journées consécutives.
              </p>
              <p>
                Il ne faut pas confondre le contrat d'extra et le contrat à temps partiel : un salarié qui revient par exemple chaque semaine pour quelques heures dans l'entreprise n'est pas un extra, mais un salarié à temps partiel.
              </p>
              <p>
                L'extra est un salarié présent de manière occasionnelle et irrégulière.
              </p>
            </div>
          </div>
          <div
            class="c6 c7"
            data-accordion-component="AccordionItem"
          >
            <div
              aria-level="3"
              class="accordion__heading"
              data-accordion-component="AccordionItemHeading"
              role="heading"
            >
              <div
                aria-controls="accordion__panel-1"
                aria-disabled="false"
                aria-expanded="false"
                class="c8"
                data-accordion-component="AccordionItemButton"
                id="accordion__heading-1"
                role="button"
                tabindex="0"
              >
                <svg
                  class="c9"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="9 18 15 12 9 6"
                  />
                </svg>
                <h1
                  class="c10"
                >
                  Secteurs autorisés
                </h1>
              </div>
            </div>
            <div
              aria-hidden="true"
              aria-labelledby="accordion__heading-1"
              class="c11"
              data-accordion-component="AccordionItemPanel"
              hidden=""
              id="accordion__panel-1"
            >
              <p>
                Dans certains secteurs d'activité où le 
                CDI
                 n'est pas un mode de recrutement traditionnellement utilisé, il est d'usage et légal de recourir au CDD, appelé 
                <i>
                  CDD d'usage constant
                </i>
                 ou 
                <i>
                  contrat d'extra
                </i>
                .
              </p>
              <p>
                En dehors des secteurs d'activité couverts par décret ou par une convention ou un accord collectif étendu, le recours au CDD d'usage n'est pas permis.
              </p>
              <div
                class="c13"
              >
                <div
                  class="c14"
                >
                  <table
                    class="c15"
                  >
                    <caption>
                      Domaines d'activité où le CDD ou l'intérim est l'usage
                    </caption>
                    <thead>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Secteurs d'activité
                        </th>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          CDD d'usage
                        </th>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Intérim
                        </th>
                      </tr>
                    </thead>
                    <tbody>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Agences de voyage et tourisme
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Déménagement
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Services à la personne
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Non
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Hôtellerie, restauration
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Centre de loisirs et de vacances
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Activité foraine
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Non
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Sport professionnel
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Enseignement
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Spectacle
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Action culturelle
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Audiovisuel, production cinématographique, édition phonographique
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Exploitation forestière
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Réparation navale
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Information
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Enquêtes, sondages
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Entreposage et stockage de la viande
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Bâtiment et travaux publics pour les chantiers à l'étranger
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Coopération, assistance technique d'ingénierie et de recherche à l'étranger
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Recherche scientifique dans le cadre d'un accord international (convention, arrangement administratif)
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                      <tr>
                        <th
                          colspan="1"
                          rowspan="1"
                        >
                          Assistance technique ou logistique dans les institutions internationales ou dans l'Union européenne prévu par les traités
                        </th>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Non
                        </td>
                        <td
                          colspan="1"
                          rowspan="1"
                        >
                          Oui
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c6 c7"
            data-accordion-component="AccordionItem"
          >
            <div
              aria-level="3"
              class="accordion__heading"
              data-accordion-component="AccordionItemHeading"
              role="heading"
            >
              <div
                aria-controls="accordion__panel-2"
                aria-disabled="false"
                aria-expanded="false"
                class="c8"
                data-accordion-component="AccordionItemButton"
                id="accordion__heading-2"
                role="button"
                tabindex="0"
              >
                <svg
                  class="c9"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="9 18 15 12 9 6"
                  />
                </svg>
                <h1
                  class="c10"
                >
                  Conclusion et fin du contrat
                </h1>
              </div>
            </div>
            <div
              aria-hidden="true"
              aria-labelledby="accordion__heading-2"
              class="c11"
              data-accordion-component="AccordionItemPanel"
              hidden=""
              id="accordion__panel-2"
            >
              <p>
                Comme tout autre CDD, le contrat d'extra ou CDD d'usage doit être établi par écrit et comporter la définition précise de son motif. À défaut, il est requalifié en CDI. 
              </p>
              <p>
                Un contrat doit être établi pour chaque vacation. 
              </p>
              <p>
                Le contrat d'extra peut être conclu pour un terme imprécis (il n'est pas limité dans sa durée) ; il doit alors comporter une durée minimale et prend fin avec la tâche pour laquelle il a été conclu. 
              </p>
              <p>
                Les formalités d'embauche sont identiques à celles des autres contrats de travail. Voir notre dossier 
                Formalités d'embauche.
              </p>
              <p>
                La fin du contrat d'extra ne donne pas droit à l'indemnité de précarité prévue pour d'autres types de CDD, sauf si une convention collective ou un accord collectif le prévoient.
              </p>
              <p>
                Un délai de carence n'est pas nécessaire en cas de succession de contrats avec un même salarié ou avec plusieurs salariés sur le même poste de travail. 
              </p>
            </div>
          </div>
          <div
            class="c6 c7"
            data-accordion-component="AccordionItem"
          >
            <div
              aria-level="3"
              class="accordion__heading"
              data-accordion-component="AccordionItemHeading"
              role="heading"
            >
              <div
                aria-controls="accordion__panel-3"
                aria-disabled="false"
                aria-expanded="false"
                class="c8"
                data-accordion-component="AccordionItemButton"
                id="accordion__heading-3"
                role="button"
                tabindex="0"
              >
                <svg
                  class="c9"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="9 18 15 12 9 6"
                  />
                </svg>
                <h1
                  class="c10"
                >
                  Rémunération et cotisations sociales
                </h1>
              </div>
            </div>
            <div
              aria-hidden="true"
              aria-labelledby="accordion__heading-3"
              class="c11"
              data-accordion-component="AccordionItemPanel"
              hidden=""
              id="accordion__panel-3"
            >
              <p>
                Le salaire de l'extra ne peut pas être inférieur ni au minimum conventionnel de la catégorie professionnelle à laquelle il appartient, ni au montant de la rémunération que percevrait dans la même entreprise un salarié en CDI de qualification équivalente et occupant les mêmes fonctions.
              </p>
              <p>
                L'employé doit être payé à chacune de ses interventions.  Si plusieurs vacations sont effectuées au cours d'un mois civil, il est possible, avec l'accord écrit du salarié, de le payer à une fréquence différente (semaine, quinzaine), sans aller au-delà d'1 mois, sans que la nature juridique du contrat s'en trouve modifiée.
              </p>
              <p>
                Il est possible d'établir un seul bulletin de paie récapitulatif qui ventile toutes les vacations lorsque la durée du contrat est inférieur à 1 mois (y compris en cas de chevauchement sur 2 mois).
              </p>
              <p>
                Elle ne s'applique pas si le salarié est embauché en CDI à l'issue du contrat court.
              </p>
            </div>
          </div>
          <div
            class="c6 c7"
            data-accordion-component="AccordionItem"
          >
            <div
              aria-level="3"
              class="accordion__heading"
              data-accordion-component="AccordionItemHeading"
              role="heading"
            >
              <div
                aria-controls="accordion__panel-4"
                aria-disabled="false"
                aria-expanded="false"
                class="c8"
                data-accordion-component="AccordionItemButton"
                id="accordion__heading-4"
                role="button"
                tabindex="0"
              >
                <svg
                  class="c9"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="9 18 15 12 9 6"
                  />
                </svg>
                <h1
                  class="c10"
                >
                  Congés et durée du travail
                </h1>
              </div>
            </div>
            <div
              aria-hidden="true"
              aria-labelledby="accordion__heading-4"
              class="c11"
              data-accordion-component="AccordionItemPanel"
              hidden=""
              id="accordion__panel-4"
            >
              <p>
                Le salarié n'a pas droit à des jours de congés.
              </p>
              <p>
                Mais, à la fin du contrat, il perçoit une indemnité de congés payés égale à 
                <strong>
                  10 %
                </strong>
                 de la rémunération totale brute perçue (quelle que soit la durée du contrat).
              </p>
              <p>
                La durée maximale est fixée par l'usage.
              </p>
              <p>
                L'employeur doit enregistrer sur un registre  l'horaire  individuel de chaque salarié et les périodes de travail réellement effectuées.
              </p>
              <p>
                Ce document doit être émargé par le salarié au moins 1 fois par semaine et tenu à la disposition de l'inspecteur de travail.
              </p>
              <p>
                Le salarié est tenu informé de ses droits acquis en matière de repos compensateur sur son bulletin de paie ou sur une fiche annexée qui indique pour le mois considéré :
              </p>
              <ul>
                <li
                  class="c12"
                >
                  <p>
                    le nombre d'heures supplémentaires effectuées ;
                  </p>
                </li>
                <li
                  class="c12"
                >
                  <p>
                    le nombre d'heures de repos compensateur auxquelles elles ouvrent droit ;
                  </p>
                </li>
                <li
                  class="c12"
                >
                  <p>
                    le nombre d'heures de repos attribuées.
                  </p>
                </li>
              </ul>
              <p>
                La durée de présence sur les lieux de travail (y compris les heures supplémentaires) ne peut pas dépasser :
              </p>
              <ul>
                <li
                  class="c12"
                >
                  <p>
                    une durée maximale par jour :
                  </p>
                  <ul>
                    <li
                      class="c12"
                    >
                      <p>
                        11 heures pour un cuisinier ;
                      </p>
                    </li>
                    <li
                      class="c12"
                    >
                      <p>
                        12 heures pour un veilleur de nuit ;
                      </p>
                    </li>
                    <li
                      class="c12"
                    >
                      <p>
                        11h30 pour un autre salarié.
                      </p>
                    </li>
                  </ul>
                </li>
                <li
                  class="c12"
                >
                  <p>
                    une durée maximale  hebdomadaire de 50 heures (en moyenne sur 12 semaines) ou de 52 heures (en durée absolue).
                  </p>
                </li>
              </ul>
            </div>
          </div>
          <div
            class="c6 c7"
            data-accordion-component="AccordionItem"
          >
            <div
              aria-level="3"
              class="accordion__heading"
              data-accordion-component="AccordionItemHeading"
              role="heading"
            >
              <div
                aria-controls="accordion__panel-5"
                aria-disabled="false"
                aria-expanded="false"
                class="c8"
                data-accordion-component="AccordionItemButton"
                id="accordion__heading-5"
                role="button"
                tabindex="0"
              >
                <svg
                  class="c9"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <polyline
                    points="9 18 15 12 9 6"
                  />
                </svg>
                <h1
                  class="c10"
                >
                  Requalification en CDI
                </h1>
              </div>
            </div>
            <div
              aria-hidden="true"
              aria-labelledby="accordion__heading-5"
              class="c11"
              data-accordion-component="AccordionItemPanel"
              hidden=""
              id="accordion__panel-5"
            >
              <p>
                Si la mission de l'extra dépasse 60 jours dans un trimestre dans le même établissement, son contrat peut être requalifié en CDI.
              </p>
              <p>
                Le salarié bénéficie d'une procédure accélérée pour le demander devant le bureau de jugement du conseil de prud'hommes (sans conciliation préalable). Le bureau  doit statuer au fond dans un délai d'1 mois suivant sa saisine.
              </p>
              <p>
                Lorsque le salarié voit sa demande de requalification acceptée, le contrat de travail est considéré comme étant à durée indéterminée dès l'origine. Le salarié a en outre droit à une indemnité de requalification égale au minimum à 1 mois de salaire.
              </p>
              <p>
                L'employeur encourt une amende de 
                <strong>
                  3 750 €
                </strong>
                , et  une amende de
                <strong>
                   7 500 €
                </strong>
                 et 6 mois d'emprisonnement en cas de récidive. Pour les personnes morales, l'amende est multipliée par 5 : soit, 
                <strong>
                  18 750 €
                </strong>
                , 
                <strong>
                  37 500 €
                </strong>
                 en cas de récidive.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div>
      <p>
        hello 
        <strong>
          world
        </strong>
      </p>
    </div>
  </section>
</div>
`;

exports[`<Contribution /> should render with no answer 1`] = `<div />`;
